--- a/app/assets/css/layout.css
+++ b/app/assets/css/layout.css
@@ -32,11 +32,15 @@ html {
             align-self: center;
             display: flex;
             align-items: center;
-            gap: 0.25rem;
+            gap: 0.75rem;
             padding-right: 0.5rem;
         }
         .header-actions .icon {
             margin-top: 0;
+        }
+        .header-actions > a {
+            display: flex;
+            align-items: center;
         }
     }
 
